Added HtmlUnit to the build script

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    
+    // https://mvnrepository.com/artifact/net.sourceforge.htmlunit/htmlunit
+    compile group: 'net.sourceforge.htmlunit', name: 'htmlunit', version: '2.36.0'
 }
 
 // Define the main class for the application
